Modularize Docker Compose and Enhance Documentation (#8)
* feat: Standardize workflows, Docker setup, and SonarQube config

* docs: Update Docker Compose documentation and modularize setup

* fix: Dockerfile SonarQube alert by merging RUN instructions

* fix triggers for GH secrets

--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -1,16 +1,17 @@
-name: Build
+name: Sonarqube Scan
 
 on:
   push:
     branches:
       - main
-
+  pull_request_target:
+    types: [opened, synchronize, reopened] # Trigger on PR opened, updated, or reopened
 
 jobs:
-  build:
-    name: Build and analyze
+  sonarqube_analysis:
+    name: Sonarqube Analysis
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v4
         with:
