Obtain  SonarQube ceredentials and store them as github action secrets so the workflow can run successfully

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,4 @@
-sonar.projectKey=bettergovph_govchaind_553dda25-6162-4d16-a1e3-24a9ffe2a357
-sonar.coverage.exclusions=**
+#sonar.projectKey=bettergovph_govchaind_553dda25-6162-4d16-a1e3-24a9ffe2a357
+#sonar.coverage.exclusions=**
+sonar.projectKey=greenarmor_govchaind
+sonar.organization=greenarmor
