Updated the local Docker Compose file so the environment key is an explicit mapping and clarified how to add optional local variables without breaking schema validation.

--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -8,10 +8,10 @@ services:
       - "26657:26657"
     volumes:
       - govchaind_data:/home/nonroot/.govchain
-    environment:
-      # Add any local development specific environment variables here
-      # For example:
-      # - DEBUG=true
+    # Add any local development specific environment variables here
+    # For example:
+    #   DEBUG: "true"
+    environment: {}
     # command: start --log_level debug # Example of overriding default command
 volumes:
   govchaind_data:
