--- a/.github/workflows/sonarqube.yaml
+++ b/.github/workflows/sonarqube.yaml
@@ -11,25 +11,16 @@ jobs:
   sonarqube_analysis:
     name: Sonarqube Analysis
     runs-on: ubuntu-latest
-    env:
-      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN || '' }}
-      SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL || '' }}
 
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Skip SonarQube when credentials are missing
-        if: env.SONAR_TOKEN == '' || env.SONAR_HOST_URL == ''
-        run: |
-          echo "SONAR_TOKEN or SONAR_HOST_URL is not configured. Skipping SonarQube analysis."
       - uses: SonarSource/sonarqube-scan-action@v6
-        if: env.SONAR_TOKEN != '' && env.SONAR_HOST_URL != ''
         env:
-          SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ env.SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       - uses: SonarSource/sonarqube-quality-gate-action@v1
-        if: env.SONAR_TOKEN != '' && env.SONAR_HOST_URL != ''
         timeout-minutes: 5
         env:
-          SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
